intento de despeje

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             <label for="ecuanción_text_2">
                 <samp >escriba la ecuación segun las intruciones <br> x debe tener el mismo exponente y tener raiz</samp>
                 <br>
-                <input type="text" id="ecuanción_text_2.1" placeholder=" y = raiz(((5+x)**2)">÷
-                <input type="text" id="ecuanción_text_2.2" placeholder=" /2-x)">
+                <input type="text" id="ecuanción_text_2.1" placeholder=" y = (5**2)+x">÷
+                <input type="text" id="ecuanción_text_2.2" placeholder=" 2-x">
             </label>
             <label for="btn">
                 <button type="button" onclick="operación()" id="btn">play</button>
