--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         <img src="./funcion.svg" alt="instruciones">
     </figure>
     <form action="">
+         <label for="">
+            <samp>pon los valores para x separados por una coma</samp>
+            <input type="text" id="xValues" placeholder="-2, -1, 0, 1, 2, ...,">
+         </label> 
+         <br>
         <label for="type_función">
             <samp>escoja el tipo de función</samp>
             <select id="type_función" class="selector">
@@ -75,6 +80,8 @@
             </label>
         </form>
     </div>
+
+    <div id="app"></div>
     
 
     <script src="./funciones.js"></script>
